Add some initial tests

--- a/html/options.html
+++ b/html/options.html
@@ -31,9 +31,9 @@
   Dictionaries:<br/>
   <div style='padding-left:80px'>
     <input id="tbDict0" type="text" /><input id='tf0' type='file' style='display:none' onclick='this.value=null;' /><br/>
-    <input id="tbDict1" type="text" /><input id='tf1' type='file' style='display:none' /><br/>
-    <input id="tbDict2" type="text" /><input id='tf2' type='file' style='display:none' /><br/>
-    <input id="tbDict3" type="text" /><input id='tf3' type='file' style='display:none' /><br/>
+    <input id="tbDict1" type="text" /><input id='tf1' type='file' style='display:none' onclick='this.value=null;' /><br/>
+    <input id="tbDict2" type="text" /><input id='tf2' type='file' style='display:none' onclick='this.value=null;' /><br/>
+    <input id="tbDict3" type="text" /><input id='tf3' type='file' style='display:none' onclick='this.value=null;' /><br/>
   </div>
 </div>
 
