--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -21,8 +21,7 @@
 
   <!-- include spec files here... -->
   <script src="test_chord.js"></script>
-  <script src="test_input.js"></script>
-  <script src="test_tst.js"></script>
+  <!--<script src="test_input.js"></script>-->
   <script src="test_dictionary.js"></script>
   <script src="test_translator.js"></script>
   <script src="test_formatter.js"></script>
