--- a/html/options.html
+++ b/html/options.html
@@ -6,6 +6,17 @@
   </style>
 </head>
 <body>
+  
+<div>
+  To Enable:
+  <div style='padding-left:80px; text-style:italic'>
+    <h4>Can only be enabled on Chromebooks</h4>
+    Open your <a href="chrome://settings/languages" target="_blank">Language and Input Settings</a> and ensure <i>Steno Keyboard</i> is checked under <b>Input Method</b>
+    <br/><br/>
+    <i>Active keyboard can be selected from the System Tray</i>
+    <br/><br/>
+  </div>
+</div>
 
 <div>
   Input device:
@@ -30,10 +41,14 @@
 <div>
   Dictionaries:<br/>
   <div style='padding-left:80px'>
-    <input id="tbDict0" type="text" /><input id='tf0' type='file' style='display:none' onclick='this.value=null;' /><br/>
-    <input id="tbDict1" type="text" /><input id='tf1' type='file' style='display:none' onclick='this.value=null;' /><br/>
-    <input id="tbDict2" type="text" /><input id='tf2' type='file' style='display:none' onclick='this.value=null;' /><br/>
-    <input id="tbDict3" type="text" /><input id='tf3' type='file' style='display:none' onclick='this.value=null;' /><br/>
+    <label>
+      <input type="checkbox" id="cbDefaultDictionary">
+      Use default dictionary?
+    </label><br/>
+    <label>
+      <input type="checkbox" id="cbCustomDictionary">
+      Use custom dictionaries?
+    </label>
   </div>
 </div>
 
