Undo and redo an extra phrase, during undo process.

--- a/html/options.html
+++ b/html/options.html
@@ -49,6 +49,7 @@
       <input type="checkbox" id="cbCustomDictionary">
       Use custom dictionaries?
     </label>
+    <button id='btnEditCustomDictionaries'>Edit Dictionaries...</button>
   </div>
 </div>
 
@@ -69,8 +70,9 @@
   </div>
 </div>
 <br/><br/>
-<div id="status"></div>
-<button id="save">Save</button>
+<div id="status" style='float:left'></div>
+<button id="save" style='float:right'>Save</button>
+<br/><br/>
 
 <script src="/js/options.js"></script>
 </body>
