Complete rewrite of translator

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -16,11 +16,13 @@
   <script src="../js/chord.js"></script>
   <script src="../js/input.js"></script>
   <script src="../js/dictionary.js"></script>
+  <script src="../js/state.js"></script>
   <script src="../js/translator.js"></script>
   <script src="../js/formatter.js"></script>
 
   <!-- include spec files here... -->
   <script src="test_chord.js"></script>
+  <script src="test_state.js"></script>
   <!--<script src="test_input.js"></script>-->
   <script src="test_dictionary.js"></script>
   <script src="test_translator.js"></script>
