--- a/html/options.html
+++ b/html/options.html
@@ -32,8 +32,8 @@
   <div style='padding-left:80px'>
     <select id="ddlTranslator">
       <option value="RAW">Raw Strokes</option>
-      <option value="DICTIONARY">Dictionary Lookup</option>
-      <option value="ORTHOGRAPHY">Dictionary Lookup with Orthography</option>
+      <option value="SIMPLE">Simple Dictionary Lookup</option>
+      <option value="FULL">Dictionary Lookup with Orthography</option>
     </select>
   </div>
 </div>
