Allow keys for switching IMEs to pass through

--- a/html/options.html
+++ b/html/options.html
@@ -33,7 +33,7 @@
     <select id="ddlTranslator">
       <option value="RAW">Raw Strokes</option>
       <option value="SIMPLE">Simple Dictionary Lookup</option>
-      <option value="FULL">Dictionary Lookup with Orthography</option>
+      <option value="FULL">Dictionary Lookup with Formatting</option>
     </select>
   </div>
 </div>
