Move plugin ids to their own file.  Fix one plugin ID had not been updated

--- a/html/options.html
+++ b/html/options.html
@@ -84,6 +84,7 @@
 <button id="save" style='float:right'>Save</button>
 <br/><br/>
 
+<script src="/js/plugins.js"></script>
 <script src="/js/options.js"></script>
 </body>
 </html>
