Remove SimpleTranslator, and replace with various formatters

--- a/html/options.html
+++ b/html/options.html
@@ -36,7 +36,7 @@
     <select id="ddlTranslator">
       <option value="RAW">Raw Strokes</option>
       <option value="SIMPLE">Simple Dictionary Lookup</option>
-      <option value="FULL">Dictionary Lookup with Formatting</option>
+      <option value="FULL">Dictionary Lookup with English Orthography</option>
     </select>
   </div>
 </div>
